# cppCryptograpphy

./: CMakeLists.txt
.github/workflows/: cmake.yml
include/crypto/: BigInt.hpp
src/: BigInt.cpp  CMakeLists.txt
tests/: CMakeLists.txt  bigIntTests.cpp
